--- a/src/app/modules/pages/profile_page/ProfilePage.component.css
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.css
@@ -1,6 +1,6 @@
 .container{
   margin-top: 10px;
-  width: 75%;
+  width: 95%;
   margin-left: auto;
   margin-right: auto;
   height: auto;
@@ -9,13 +9,16 @@
 .userInfo{
   border: rgba(179, 185, 179, 0.615);
   border-style: solid;
-  border-width: 1px;
-  margin: 10px;
-  min-height: 150px;
+  border-width: 1.5px;
+  min-height: 100px;
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 20% 60% 20%;
   justify-content: center;
   align-content: center;
+}
+.pictureBox{
+  aspect-ratio: 1/1;
+  padding: 15%;
 }
 .userPicture{
   display: flex;
@@ -25,10 +28,7 @@
   align-items: center;
   padding: 5%;
 }
-.pictureBox{
-  aspect-ratio: 1/1;
-  padding: 15%;
-}
+
 .userPicture img{
   border-radius: 50%;
   height: 100%;
@@ -51,15 +51,22 @@
   display: inline-block;
 }
 
-
+.buttons{
+  display: flex;
+  justify-content: center;
+  column-gap: 10%;
+  align-items: center;
+}
+a{
+  text-decoration: none;
+  color: black;
+}
 .tabs{
   display: flex;
   margin: 10px;
   height: 45px;
   justify-content: center;
   column-gap: 5%;
-
-
 }
 
 .posts a{
@@ -101,12 +108,14 @@
 .userPosts{
   /* border: rgba(131, 137, 131, 0.698);
   border-style: solid; */
-  margin: 10px;
   padding: 10px;
-  min-height: 200px;
+  min-height: 400px;
   display: grid;
+  border-width: 1px;
   grid-template-columns: 20% 20% 20% 20%;
   column-gap: 2%;
+  border-style: solid;
+  border-color: rgba(178, 178, 178, 0.481);
   
   /* justify-content:flex-start;
   align-content: center; */
