--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -2,15 +2,20 @@
   <div class="userInfo">
     <div class="userPicture">
       <div class="pictureBox">
-        <img src="../../../../assets/product3.jpg" alt="User Profile Picture">
+        <img src="../../../../assets/product1.jpg" alt="User Profile Picture">
       </div>
-      
     </div>
     <div class="userBio">
       <div class="userName">
         User Name
       </div>
-      <div class="userBioInfo"> I am a tech reviewer</div>
+      <div class="userBioInfo"> I am a tech reviewer</div>  
+    </div>
+    <div class="buttons">
+      <a href="/edit_profile/:id"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
+      </a>
+      <a href=""><fa-icon [icon]="faArrowAltCircleRight" class="logout-button"  title="Log Out"></fa-icon>
+      </a>
     </div>
   </div>
    <!-- Posts/Favourites  -->
@@ -27,7 +32,7 @@
 
    <!-- Posts  -->
    <div class="userPosts">
-
+    Posts Go Here
 
    </div>
 
