--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -1,29 +1,31 @@
 <div class="page">
-  <h1 class="pageTitle">Create Post</h1>
+  <div class="container">
+    <h1 class="pageTitle">Create Post</h1>
 
-  <!--Space for image Uploader-->
-  <br><br><br><br><br><br><br><br><br><br>
-  <!--Space for image Uploader-->
+    <br><br><br><br><br><br><br><br><br><br>
 
-  <div>
-    <input maxlength="25" class="revTitleTextBox"  placeholder="Your Title goes here..." [(ngModel)]="titleText" >
-  </div>
-
-  <!--Space for image Hash Tags-->
-  <br><br><br><br>
-  <!--Space for image Hash Tags-->
-
-  <h3 class="reviewTitle">Your Review:</h3>
-  
-  <div class="reviewContainer">
     <div>
-      <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+      <input maxlength="25" class="revTitleTextBox"  placeholder="Your Title goes here..." [(ngModel)]="titleText" >
     </div>
-    <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
-    <ng-template #charLim class="charLabel">
-      <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
-    </ng-template>
-    <br>
-    <button class="postButton" (click)="create()">Post</button>
+
+    <br><br><br><br><br><br><br><br><br><br>
+
+    <h3 class="reviewTitle">Your Review:</h3>
+
+    <div class="reviewContainer">
+      <div>
+        <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+      </div>
+      <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
+      <ng-template #charLim class="charLabel">
+        <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
+      </ng-template>
+      <br>
+      <button class="postButton" (click)="create()">Post</button>
+      <button class="cancelButton"> Cancel </button>
+    </div>
+
   </div>
+  
+
 </div>
