--- a/src/app/modules/elements/card/Card.component.html
+++ b/src/app/modules/elements/card/Card.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <!--image section-->
     <div class="imgBox">
-      <a href="post/123">
+      <a (click)="goToPostPage()">
         <img [src]="post.images[0]">
       </a>
     </div>
@@ -19,7 +19,7 @@
     <div class="userProfileInfo">
       <!--user profile picture section-->
       <div class="userProfileIcon">
-        <a href="profile/123">
+        <a (click)="goToProfilePage()">
           <img [src]="post.posterId.profile_image">
         </a>
       </div>
