--- a/src/app/modules/pages/create_post/CreatePost.component.html
+++ b/src/app/modules/pages/create_post/CreatePost.component.html
@@ -2,33 +2,27 @@
   <div class="container">
     <h1 class="pageTitle">Create Post</h1>
 
-    <br><br><br><br><br><br><br><br><br><br>
+    <ImageUploader (changeEvent)="updateImages($event)"></ImageUploader>
 
     <div>
       <input maxlength="25" class="revTitleTextBox"  placeholder="Your Title goes here..." [(ngModel)]="titleText" >
     </div>
 
-  <!--Space for image Hash Tags-->
-  <br><br>
-  <HashtagBar>
+    <HashtagBar (changeEvent)="updateKeywords($event)"></HashtagBar>
 
-  </HashtagBar>
-  <br><br>
-  <!--Space for image Hash Tags-->
+    <h3 class="reviewTitle">Your Review:</h3>
 
-  <h3 class="reviewTitle">Your Review:</h3>
-
-  <div class="reviewContainer">
-    <div>
-      <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+    <div class="reviewContainer">
+      <div>
+        <textarea class="revDescripTextBox" [(ngModel)]="inputText" maxlength="{{ txtLimit }}" rows="4" placeholder="Your review goes here..."></textarea>
+      </div>
+      <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
+      <ng-template #charLim class="charLabel">
+        <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
+      </ng-template>
+      <br>
+      <button class="postButton" (click)="createPost()">Post</button>
     </div>
-    <div *ngIf="100 > txtLimit - inputText.length; then charLim"></div>
-    <ng-template #charLim class="charLabel">
-      <label>{{txtLimit - inputText.length}}/{{txtLimit}}</label>
-    </ng-template>
-    <br>
-    <button class="postButton" (click)="createPost()">Post</button>
-  </div>
   
-
+  </div>
 </div>
