--- a/src/app/modules/pages/profile_page/ProfilePage.component.html
+++ b/src/app/modules/pages/profile_page/ProfilePage.component.html
@@ -2,14 +2,14 @@
   <div class="userInfo">
     <div class="userPicture">
       <div class="pictureBox">
-        <img src="../../../../assets/product1.jpg" alt="User Profile Picture">
+        <img [src]="user.profile_image" alt="User Profile Picture">
       </div>
     </div>
     <div class="userBio">
       <div class="userName">
-        User Name
+        {{user.user_name}}
       </div>
-      <div class="userBioInfo"> I am a tech reviewer</div>  
+      <div class="userBioInfo"> {{user.bio}}</div>  
     </div>
     <div class="buttons">
       <a href="/edit_profile/:id"><fa-icon [icon]="faPenToSquare" class="edit-button" title="Edit"></fa-icon>
@@ -18,22 +18,20 @@
       </a>
     </div>
   </div>
+
    <!-- Posts/Favourites  -->
   <div class="tabs">
     <div class="posts">
-      <a href="https://www.google.com/">Posts
-      </a>
+      <a href="https://www.google.com/">Posts</a>
     </div>
     <div class="favorites">
       <a href="https://www.google.com/">Favorites</a>
     </div>
   </div>
 
-
    <!-- Posts  -->
    <div class="userPosts">
-    Posts Go Here
-
+    <CardScreen [posts]="posts"></CardScreen>
    </div>
 
 </div>
