--- a/src/app/modules/pages/edit_profile/EditProfile.component.html
+++ b/src/app/modules/pages/edit_profile/EditProfile.component.html
@@ -2,13 +2,12 @@
 <div class="container">
     <div class="edit-profile">
         <!--<input type="file" id="file" name="image" -->
-        <img src="#" width="100%" height="100%"> 
+        <img [src]="currentUser.profile_image" width="100%" height="100%"> 
         
         <div class="image-upload">
             <input type="file" id="file" name="image" >
             <label for="file">
                 <!--<img id="camera" src="assets/camera-icon.svg" style="width:35px; height:35px"/> -->
-                
                 <fa-icon [icon]="faCamera" class="camera"  title="Info button"></fa-icon>
                     
             </label>
@@ -17,15 +16,15 @@
 
         <div class="nameBar">
             <header class="titleName"></header>
-            <input type="text" placeholder="Name" name="" [(ngModel)]="newName" #ctrl="ngModel" required>
+            <input type="text" placeholder="Name" name="" [(ngModel)]="currentUser.user_name" #ctrl="ngModel" required>
         </div>
         <div class="emailBar">
             <header class="titleEmail"></header>
-            <input type="email" placeholder="Email ID" name="" [(ngModel)]="newEmail" #ctrl="ngModel" required> <!-- this should be read only-->
+            <input type="email" placeholder="Email ID" name="" [(ngModel)]="currentUser.email" #ctrl="ngModel" required> <!-- this should be read only-->
         </div>
         <div class="bioBar">
             <header class="titleBio"></header>
-            <input type="text" placeholder="Bio" name="" [(ngModel)]="newBio" #ctrl="ngModel" required> 
+            <input type="text" placeholder="Bio" name="" [(ngModel)]="currentUser.bio" #ctrl="ngModel" required> 
         </div>
         <div class="info-btn">
             <fa-icon [icon]="faQuestionCircle" class="info-icon3"  title="Info button"></fa-icon>
@@ -43,12 +42,4 @@
         <br>
         <button (click)="editProfile()" name="done" style="float: right;margin:10px 18.2% 0 0;">Save</button>
     </div>
-
-    <p>
-        UsernameValue: {{ newName }}
-        UserEmailValue: {{ newEmail }}
-        UserBioValue: {{ newBio }}
-    </p>
-
-
 </div>
